feat: 实现 AG-UI 协议支持
- 新增 AG-UI 协议适配器 (src/utils/agui_adapter.py)
  - 支持 16 种标准事件类型
  - 自动转换内部事件为 AG-UI 格式
  - 支持流式逐字输出 (delta)
  - 完整支持思考过程、工具调用等

- 更新流式对话接口 (src/api/routes/chat_stream.py)
  - 集成 AGUIAdapter
  - 所有事件自动转换为 AG-UI 协议
  - 更新 API 文档说明

- 优化 ReAct Prompt (src/agent/prompts.py)
  - 添加格式规则强调
  - 提供具体示例避免格式错误
  - 减少 LLM 重试次数

- 新增前端集成指南 (docs/FRONTEND_INTEGRATION.md)
  - TDesign Chat 集成说明
  - 完整的代码示例
  - 事件流程说明
  - 常见问题解答

🎯 现在支持 TDesign Chat 组件零配置集成！

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,11 @@ __pycache__/
 # Temporary files
 *.log
 test_*.txt
+test_*.py
+test_*.json
 *_result.txt
 *_response.json
 *.db
 nul
+reasoning_debug.txt
+thought_analysis.txt
